<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context="com.craftstudio.launcher.ui.fragment.SettingsFragment">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/settings_viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_minus4sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settings_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/shadowView"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#33FFB74D"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.angcyo.tablayout.DslTabLayout
            android:id="@+id/settings_tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#D9151520"
            app:layout_constraintEnd_toStartOf="@+id/shadowView"
            app:layout_constraintStart_toStartOf="parent"
            app:tab_draw_indicator="true"
            app:tab_indicator_color="#FFB74D"
            app:tab_indicator_enable_flow="true"
            app:tab_indicator_x_offset="@dimen/_4sdp"
            app:tab_orientation="VERTICAL">

            <com.craftstudio.launcher.ui.layout.AnimRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">
                <ImageView
                    android:id="@+id/video_image"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_6sdp"
                    app:tint="#FFB74D"
                    app:srcCompat="@drawable/ic_setting_video" />
                <TextView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/video_image"
                    android:text="@string/setting_category_video"
                    android:textColor="#E8EAF6"
                    android:textStyle="bold" />
            </com.craftstudio.launcher.ui.layout.AnimRelativeLayout>

            <com.craftstudio.launcher.ui.layout.AnimRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">
                <ImageView
                    android:id="@+id/controls_image"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_6sdp"
                    app:tint="#FFB74D"
                    app:srcCompat="@drawable/ic_menu_custom_controls" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/controls_image"
                    android:text="@string/setting_category_control"
                    android:textColor="#E8EAF6"
                    android:textStyle="bold" />
            </com.craftstudio.launcher.ui.layout.AnimRelativeLayout>

            <com.craftstudio.launcher.ui.layout.AnimRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">
                <ImageView
                    android:id="@+id/game_image"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_6sdp"
                    app:tint="#FFB74D"
                    app:srcCompat="@drawable/ic_setting_game" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/game_image"
                    android:text="@string/setting_category_game"
                    android:textColor="#E8EAF6"
                    android:textStyle="bold" />
            </com.craftstudio.launcher.ui.layout.AnimRelativeLayout>

            <com.craftstudio.launcher.ui.layout.AnimRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">
                <ImageView
                    android:id="@+id/launcher_image"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_6sdp"
                    app:tint="#FFB74D"
                    app:srcCompat="@drawable/ic_setting_launcher" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/launcher_image"
                    android:text="@string/setting_category_launcher"
                    android:textColor="#E8EAF6"
                    android:textStyle="bold" />
            </com.craftstudio.launcher.ui.layout.AnimRelativeLayout>

            <com.craftstudio.launcher.ui.layout.AnimRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">
                <ImageView
                    android:id="@+id/experimental_image"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_6sdp"
                    app:tint="#FFB74D"
                    app:srcCompat="@drawable/ic_setting_experimental" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/experimental_image"
                    android:text="@string/setting_category_experimental"
                    android:textColor="#E8EAF6"
                    android:textStyle="bold" />
            </com.craftstudio.launcher.ui.layout.AnimRelativeLayout>

        </com.angcyo.tablayout.DslTabLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
