<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:ignore="ContentDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/classify_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/classify_shadowView"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#33FFB74D"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.angcyo.tablayout.DslTabLayout
            android:id="@+id/classify_tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#D9151520"
            app:layout_constraintEnd_toStartOf="@+id/classify_shadowView"
            app:layout_constraintStart_toStartOf="parent"
            app:tab_draw_indicator="true"
            app:tab_indicator_color="#FFB74D" 
            app:tab_indicator_enable_flow="true"
            app:tab_indicator_x_offset="@dimen/_4sdp"
            app:tab_orientation="VERTICAL">

            <com.craftstudio.launcher.ui.layout.AnimRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/mod_image"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:scaleType="fitCenter"
                    app:tint="#FFB74D"
                    app:srcCompat="@drawable/ic_profile_mods" />

                <TextView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_toEndOf="@+id/mod_image"
                    android:text="@string/download_classify_mod"
                    android:textColor="#E8EAF6"
                    android:textStyle="bold" />
            </com.craftstudio.launcher.ui.layout.AnimRelativeLayout>

            <com.craftstudio.launcher.ui.layout.AnimRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/modpack_image"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:scaleType="fitCenter"
                    app:tint="#FFB74D"
                    app:srcCompat="@drawable/ic_zip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_toEndOf="@+id/modpack_image"
                    android:text="@string/download_classify_modpack"
                    android:textColor="#E8EAF6"
                    android:textStyle="bold" />
            </com.craftstudio.launcher.ui.layout.AnimRelativeLayout>

            <com.craftstudio.launcher.ui.layout.AnimRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/resource_pack_image"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:scaleType="fitCenter"
                    app:tint="#FFB74D"
                    app:srcCompat="@drawable/ic_profile_resource_pack" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_toEndOf="@+id/resource_pack_image"
                    android:text="@string/download_classify_resource_pack"
                    android:textColor="#E8EAF6"
                    android:textStyle="bold" />
            </com.craftstudio.launcher.ui.layout.AnimRelativeLayout>

            <com.craftstudio.launcher.ui.layout.AnimRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/world_image"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:scaleType="fitCenter"
                    app:tint="#FFB74D"
                    app:srcCompat="@drawable/ic_profile_saves" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_toEndOf="@+id/world_image"
                    android:text="@string/download_classify_world"
                    android:textColor="#E8EAF6"
                    android:textStyle="bold" />
            </com.craftstudio.launcher.ui.layout.AnimRelativeLayout>

            <com.craftstudio.launcher.ui.layout.AnimRelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/shader_pack_image"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:scaleType="fitCenter"
                    app:tint="#FFB74D"
                    app:srcCompat="@drawable/ic_profile_shader_pack" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_toEndOf="@+id/shader_pack_image"
                    android:text="@string/download_classify_shader_pack"
                    android:textColor="#E8EAF6"
                    android:textStyle="bold" />
            </com.craftstudio.launcher.ui.layout.AnimRelativeLayout>
        </com.angcyo.tablayout.DslTabLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/download_viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/classify_layout"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
